[project]
name = "traktor"
version = "1.0.0"
description = "Sync liked Trakt lists into Plex playlists with cache-assisted matching"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "SwordfishTrumpet"}
]
keywords = ["plex", "trakt", "playlists", "automation", "media"]
dependencies = [
    "plexapi>=4.15.0",
    "requests>=2.28.0",
    "python-dotenv>=1.0.0",
    "certifi>=2024.0.0",
]

[project.urls]
Repository = "https://github.com/SwordfishTrumpet/traktor"
Issues = "https://github.com/SwordfishTrumpet/traktor/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
traktor = "traktor:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
python-preference = "only-managed"

[tool.uv.pip]
generate-hashes = true

[tool.black]
line-length = 100
target-version = ['py38']

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.ruff.lint.pydocstyle]
convention = "google"
